--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,6 @@ python:
     - "3.6"
 # install requirements
 install:
-  - pip install -r requirements.txt
+  - pip3 install -r requirements.txt
 script:
   - pytest
