--- a/Pipfile
+++ b/Pipfile
@@ -4,9 +4,8 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
-coveralls = "*"
-coverage = "*"
 pytest = "*"
+codecov = "*"
 pytest-cov = "*"
 
 [packages]
