--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,6 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [packages]
-mutagen = "*"
 requests = "*"
 tqdm = "*"
-docopt = "*"
+eyed3 = "*"
