--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,29 @@
-language: python
-python:
-    - "3.6"
+matrix:
+  include:
+    - os: osx
+      language: generic
+      env: PYTHON=3.6.8
+      before_install:
+        - brew update
+        - brew install pyenv || brew upgrade pyenv
+        - pyenv install $PYTHON
+        - export PYENV_VERSION=$PYTHON
+        - export PATH="/Users/travis/.pyenv/shims:${PATH}"
+        - pyenv-virtualenv venv
+        - source venv/bin/activate
+        - python --version
+
+    - os: linux
+      language: python
+      python:
+        - 3.6
+        - 3.7
+
+
+
 install:
   - make
   - make install
+
 script:
   - make test
